--- a/docs/milestone2.ipynb
+++ b/docs/milestone2.ipynb
@@ -73,9 +73,12 @@
    "metadata": {},
    "source": [
     "Steps to download: \n",
-    "You want to download the code from our repo to your local computer. \\\n",
-    "`git clone https://github.com/cs107-creativename/cs107-FinalProject.git` \\\n",
-    "`cd cs107-FinalProject` \\\n",
+    "You want to download the code from our repo to your local computer. \n",
+    "\n",
+    "`git clone https://github.com/cs107-creativename/cs107-FinalProject.git` \n",
+    "\n",
+    "`cd cs107-FinalProject` \n",
+    "\n",
     "`pip install - r requirements.txt` "
    ]
   },
@@ -299,8 +302,24 @@
    "id": "dfc2b4e6-98fa-4bc5-8ccc-c75ac3682463",
    "metadata": {},
    "source": [
-    "## Futu"
+    "## Future Features"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cbee9bb1-7c8d-445f-8ce8-78f61ad9215e",
+   "metadata": {},
+   "source": [
+    " Need to add here"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "442c72bb-4f99-49d1-85c8-0d5a295de16d",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
