--- a/docs/milestone2.ipynb
+++ b/docs/milestone2.ipynb
@@ -100,13 +100,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "b3959111-e003-4b32-925d-e2ae46c8e944",
    "metadata": {},
    "outputs": [],
    "source": [
     "import sys\n",
-    "sys.path.append('../dual_temp/')\n",
+    "sys.path.append('../src')\n",
     "from dual_temp import *"
    ]
   },
@@ -121,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "8887c5f9-7a0e-420e-b313-c5f38a40fc43",
    "metadata": {},
    "outputs": [],
@@ -140,10 +140,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "99c7368b-20e8-4bf9-98bf-f6605ac67895",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2.8414709848078967 3.5403023058681398\n"
+     ]
+    }
+   ],
    "source": [
     "# Single dimension input case, x=1\n",
     "x = dual(1)\n",
