Updates to readme and milestone2 to include feature extensions & coverage image

--- a/docs/milestone2.ipynb
+++ b/docs/milestone2.ipynb
@@ -318,7 +318,9 @@
    "id": "cbee9bb1-7c8d-445f-8ce8-78f61ad9215e",
    "metadata": {},
    "source": [
-    " Need to add here"
+    "  We plan to implement the Reverse Mode of Auto differentiation. It accomplishes the same tasks as the Forward mode that we have already implemented but has different methods to accomplish this. The Reverse Mode has two passes, Forward and Reverse, and does not use the chain rule. Reverse Mode use the sensitivity of the function with respect to the independent variable and all intermediate variables in order to recover the gradient that was not calculated in each step because we did not use the chain rule. The Forward pass of Reverse Mode works to get the value of the function for that independent variable as well as the derivative with respect __ONLY__ that independent variable (no chain rule). The Reverse Pass then creates the chain rule that was not done in the Forward pass by traversing the path that was created in the Forward pass backwards. This traversal will work to store the sensitivity or the chain rule in each step. This back propagation works only with values and does not require us to evaluate the function further.\n",
+    "   \n",
+    "   To implement the Reverse Mode, we plan to create a computational graph that will store all the derivative values associated with each node from the Forward pass. The stored values can then be used when we are backpropgating in the Reverse pass to calculate the gradient. This will require a complement independent class structure that clients will need to import. The Reverse Method will work with all the same elementary functions covered in the Forward Pass and should have similar workflows in implementation."
    ]
   },
   {
