--- a/docs/milestone2.ipynb
+++ b/docs/milestone2.ipynb
@@ -100,10 +100,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 16,
    "id": "b3959111-e003-4b32-925d-e2ae46c8e944",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ERROR! Session/line number was not unique in database. History logging moved to new session 352\n"
+     ]
+    }
+   ],
    "source": [
     "import sys\n",
     "sys.path.append('../src')\n",
@@ -121,12 +129,230 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "8887c5f9-7a0e-420e-b313-c5f38a40fc43",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "ERROR:root:Internal Python error in the inspect module.\n",
+      "Below is the traceback from this internal error.\n",
+      "\n",
+      "ERROR:root:Internal Python error in the inspect module.\n",
+      "Below is the traceback from this internal error.\n",
+      "\n",
+      "ERROR:root:Internal Python error in the inspect module.\n",
+      "Below is the traceback from this internal error.\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Traceback (most recent call last):\n",
+      "  File \"/Users/adrianatrejo-sheu/opt/anaconda3/lib/python3.8/site-packages/IPython/core/interactiveshell.py\", line 3437, in run_code\n",
+      "    exec(code_obj, self.user_global_ns, self.user_ns)\n",
+      "  File \"<ipython-input-16-56dc16224347>\", line 1, in <module>\n",
+      "    x = Dual(3)\n",
+      "NameError: name 'Dual' is not defined\n",
+      "\n",
+      "During handling of the above exception, another exception occurred:\n",
+      "\n",
+      "Traceback (most recent call last):\n",
+      "  File \"/Users/adrianatrejo-sheu/opt/anaconda3/lib/python3.8/site-packages/IPython/core/interactiveshell.py\", line 2061, in showtraceback\n",
+      "    stb = value._render_traceback_()\n",
+      "AttributeError: 'NameError' object has no attribute '_render_traceback_'\n",
+      "\n",
+      "During handling of the above exception, another exception occurred:\n",
+      "\n",
+      "Traceback (most recent call last):\n",
+      "  File \"/Users/adrianatrejo-sheu/opt/anaconda3/lib/python3.8/site-packages/IPython/core/ultratb.py\", line 1101, in get_records\n",
+      "    return _fixed_getinnerframes(etb, number_of_lines_of_context, tb_offset)\n",
+      "  File \"/Users/adrianatrejo-sheu/opt/anaconda3/lib/python3.8/site-packages/IPython/core/ultratb.py\", line 248, in wrapped\n",
+      "    return f(*args, **kwargs)\n",
+      "  File \"/Users/adrianatrejo-sheu/opt/anaconda3/lib/python3.8/site-packages/IPython/core/ultratb.py\", line 281, in _fixed_getinnerframes\n",
+      "    records = fix_frame_records_filenames(inspect.getinnerframes(etb, context))\n",
+      "  File \"/Users/adrianatrejo-sheu/opt/anaconda3/lib/python3.8/inspect.py\", line 1515, in getinnerframes\n",
+      "    frameinfo = (tb.tb_frame,) + getframeinfo(tb, context)\n",
+      "  File \"/Users/adrianatrejo-sheu/opt/anaconda3/lib/python3.8/inspect.py\", line 1473, in getframeinfo\n",
+      "    filename = getsourcefile(frame) or getfile(frame)\n",
+      "  File \"/Users/adrianatrejo-sheu/opt/anaconda3/lib/python3.8/inspect.py\", line 708, in getsourcefile\n",
+      "    if getattr(getmodule(object, filename), '__loader__', None) is not None:\n",
+      "  File \"/Users/adrianatrejo-sheu/opt/anaconda3/lib/python3.8/inspect.py\", line 737, in getmodule\n",
+      "    file = getabsfile(object, _filename)\n",
+      "  File \"/Users/adrianatrejo-sheu/opt/anaconda3/lib/python3.8/inspect.py\", line 721, in getabsfile\n",
+      "    return os.path.normcase(os.path.abspath(_filename))\n",
+      "  File \"/Users/adrianatrejo-sheu/opt/anaconda3/lib/python3.8/posixpath.py\", line 379, in abspath\n",
+      "    cwd = os.getcwd()\n",
+      "PermissionError: [Errno 1] Operation not permitted\n",
+      "Traceback (most recent call last):\n",
+      "  File \"/Users/adrianatrejo-sheu/opt/anaconda3/lib/python3.8/site-packages/IPython/core/interactiveshell.py\", line 3437, in run_code\n",
+      "    exec(code_obj, self.user_global_ns, self.user_ns)\n",
+      "  File \"<ipython-input-16-56dc16224347>\", line 1, in <module>\n",
+      "    x = Dual(3)\n",
+      "NameError: name 'Dual' is not defined\n",
+      "\n",
+      "During handling of the above exception, another exception occurred:\n",
+      "\n",
+      "Traceback (most recent call last):\n",
+      "  File \"/Users/adrianatrejo-sheu/opt/anaconda3/lib/python3.8/site-packages/IPython/core/interactiveshell.py\", line 2061, in showtraceback\n",
+      "    stb = value._render_traceback_()\n",
+      "AttributeError: 'NameError' object has no attribute '_render_traceback_'\n",
+      "\n",
+      "During handling of the above exception, another exception occurred:\n",
+      "\n",
+      "Traceback (most recent call last):\n",
+      "  File \"/Users/adrianatrejo-sheu/opt/anaconda3/lib/python3.8/site-packages/IPython/core/interactiveshell.py\", line 3357, in run_ast_nodes\n",
+      "    if (await self.run_code(code, result,  async_=asy)):\n",
+      "  File \"/Users/adrianatrejo-sheu/opt/anaconda3/lib/python3.8/site-packages/IPython/core/interactiveshell.py\", line 3454, in run_code\n",
+      "    self.showtraceback(running_compiled_code=True)\n",
+      "  File \"/Users/adrianatrejo-sheu/opt/anaconda3/lib/python3.8/site-packages/IPython/core/interactiveshell.py\", line 2063, in showtraceback\n",
+      "    stb = self.InteractiveTB.structured_traceback(etype,\n",
+      "  File \"/Users/adrianatrejo-sheu/opt/anaconda3/lib/python3.8/site-packages/IPython/core/ultratb.py\", line 1367, in structured_traceback\n",
+      "    return FormattedTB.structured_traceback(\n",
+      "  File \"/Users/adrianatrejo-sheu/opt/anaconda3/lib/python3.8/site-packages/IPython/core/ultratb.py\", line 1267, in structured_traceback\n",
+      "    return VerboseTB.structured_traceback(\n",
+      "  File \"/Users/adrianatrejo-sheu/opt/anaconda3/lib/python3.8/site-packages/IPython/core/ultratb.py\", line 1124, in structured_traceback\n",
+      "    formatted_exception = self.format_exception_as_a_whole(etype, evalue, etb, number_of_lines_of_context,\n",
+      "  File \"/Users/adrianatrejo-sheu/opt/anaconda3/lib/python3.8/site-packages/IPython/core/ultratb.py\", line 1082, in format_exception_as_a_whole\n",
+      "    last_unique, recursion_repeat = find_recursion(orig_etype, evalue, records)\n",
+      "  File \"/Users/adrianatrejo-sheu/opt/anaconda3/lib/python3.8/site-packages/IPython/core/ultratb.py\", line 382, in find_recursion\n",
+      "    return len(records), 0\n",
+      "TypeError: object of type 'NoneType' has no len()\n",
+      "\n",
+      "During handling of the above exception, another exception occurred:\n",
+      "\n",
+      "Traceback (most recent call last):\n",
+      "  File \"/Users/adrianatrejo-sheu/opt/anaconda3/lib/python3.8/site-packages/IPython/core/interactiveshell.py\", line 2061, in showtraceback\n",
+      "    stb = value._render_traceback_()\n",
+      "AttributeError: 'TypeError' object has no attribute '_render_traceback_'\n",
+      "\n",
+      "During handling of the above exception, another exception occurred:\n",
+      "\n",
+      "Traceback (most recent call last):\n",
+      "  File \"/Users/adrianatrejo-sheu/opt/anaconda3/lib/python3.8/site-packages/IPython/core/ultratb.py\", line 1101, in get_records\n",
+      "    return _fixed_getinnerframes(etb, number_of_lines_of_context, tb_offset)\n",
+      "  File \"/Users/adrianatrejo-sheu/opt/anaconda3/lib/python3.8/site-packages/IPython/core/ultratb.py\", line 248, in wrapped\n",
+      "    return f(*args, **kwargs)\n",
+      "  File \"/Users/adrianatrejo-sheu/opt/anaconda3/lib/python3.8/site-packages/IPython/core/ultratb.py\", line 281, in _fixed_getinnerframes\n",
+      "    records = fix_frame_records_filenames(inspect.getinnerframes(etb, context))\n",
+      "  File \"/Users/adrianatrejo-sheu/opt/anaconda3/lib/python3.8/inspect.py\", line 1515, in getinnerframes\n",
+      "    frameinfo = (tb.tb_frame,) + getframeinfo(tb, context)\n",
+      "  File \"/Users/adrianatrejo-sheu/opt/anaconda3/lib/python3.8/inspect.py\", line 1473, in getframeinfo\n",
+      "    filename = getsourcefile(frame) or getfile(frame)\n",
+      "  File \"/Users/adrianatrejo-sheu/opt/anaconda3/lib/python3.8/inspect.py\", line 708, in getsourcefile\n",
+      "    if getattr(getmodule(object, filename), '__loader__', None) is not None:\n",
+      "  File \"/Users/adrianatrejo-sheu/opt/anaconda3/lib/python3.8/inspect.py\", line 737, in getmodule\n",
+      "    file = getabsfile(object, _filename)\n",
+      "  File \"/Users/adrianatrejo-sheu/opt/anaconda3/lib/python3.8/inspect.py\", line 721, in getabsfile\n",
+      "    return os.path.normcase(os.path.abspath(_filename))\n",
+      "  File \"/Users/adrianatrejo-sheu/opt/anaconda3/lib/python3.8/posixpath.py\", line 379, in abspath\n",
+      "    cwd = os.getcwd()\n",
+      "PermissionError: [Errno 1] Operation not permitted\n",
+      "Traceback (most recent call last):\n",
+      "  File \"/Users/adrianatrejo-sheu/opt/anaconda3/lib/python3.8/site-packages/IPython/core/interactiveshell.py\", line 3437, in run_code\n",
+      "    exec(code_obj, self.user_global_ns, self.user_ns)\n",
+      "  File \"<ipython-input-16-56dc16224347>\", line 1, in <module>\n",
+      "    x = Dual(3)\n",
+      "NameError: name 'Dual' is not defined\n",
+      "\n",
+      "During handling of the above exception, another exception occurred:\n",
+      "\n",
+      "Traceback (most recent call last):\n",
+      "  File \"/Users/adrianatrejo-sheu/opt/anaconda3/lib/python3.8/site-packages/IPython/core/interactiveshell.py\", line 2061, in showtraceback\n",
+      "    stb = value._render_traceback_()\n",
+      "AttributeError: 'NameError' object has no attribute '_render_traceback_'\n",
+      "\n",
+      "During handling of the above exception, another exception occurred:\n",
+      "\n",
+      "Traceback (most recent call last):\n",
+      "  File \"/Users/adrianatrejo-sheu/opt/anaconda3/lib/python3.8/site-packages/IPython/core/interactiveshell.py\", line 3357, in run_ast_nodes\n",
+      "    if (await self.run_code(code, result,  async_=asy)):\n",
+      "  File \"/Users/adrianatrejo-sheu/opt/anaconda3/lib/python3.8/site-packages/IPython/core/interactiveshell.py\", line 3454, in run_code\n",
+      "    self.showtraceback(running_compiled_code=True)\n",
+      "  File \"/Users/adrianatrejo-sheu/opt/anaconda3/lib/python3.8/site-packages/IPython/core/interactiveshell.py\", line 2063, in showtraceback\n",
+      "    stb = self.InteractiveTB.structured_traceback(etype,\n",
+      "  File \"/Users/adrianatrejo-sheu/opt/anaconda3/lib/python3.8/site-packages/IPython/core/ultratb.py\", line 1367, in structured_traceback\n",
+      "    return FormattedTB.structured_traceback(\n",
+      "  File \"/Users/adrianatrejo-sheu/opt/anaconda3/lib/python3.8/site-packages/IPython/core/ultratb.py\", line 1267, in structured_traceback\n",
+      "    return VerboseTB.structured_traceback(\n",
+      "  File \"/Users/adrianatrejo-sheu/opt/anaconda3/lib/python3.8/site-packages/IPython/core/ultratb.py\", line 1124, in structured_traceback\n",
+      "    formatted_exception = self.format_exception_as_a_whole(etype, evalue, etb, number_of_lines_of_context,\n",
+      "  File \"/Users/adrianatrejo-sheu/opt/anaconda3/lib/python3.8/site-packages/IPython/core/ultratb.py\", line 1082, in format_exception_as_a_whole\n",
+      "    last_unique, recursion_repeat = find_recursion(orig_etype, evalue, records)\n",
+      "  File \"/Users/adrianatrejo-sheu/opt/anaconda3/lib/python3.8/site-packages/IPython/core/ultratb.py\", line 382, in find_recursion\n",
+      "    return len(records), 0\n",
+      "TypeError: object of type 'NoneType' has no len()\n",
+      "\n",
+      "During handling of the above exception, another exception occurred:\n",
+      "\n",
+      "Traceback (most recent call last):\n",
+      "  File \"/Users/adrianatrejo-sheu/opt/anaconda3/lib/python3.8/site-packages/IPython/core/interactiveshell.py\", line 2061, in showtraceback\n",
+      "    stb = value._render_traceback_()\n",
+      "AttributeError: 'TypeError' object has no attribute '_render_traceback_'\n",
+      "\n",
+      "During handling of the above exception, another exception occurred:\n",
+      "\n",
+      "Traceback (most recent call last):\n",
+      "  File \"/Users/adrianatrejo-sheu/opt/anaconda3/lib/python3.8/site-packages/IPython/core/interactiveshell.py\", line 2940, in _run_cell\n",
+      "    return runner(coro)\n",
+      "  File \"/Users/adrianatrejo-sheu/opt/anaconda3/lib/python3.8/site-packages/IPython/core/async_helpers.py\", line 68, in _pseudo_sync_runner\n",
+      "    coro.send(None)\n",
+      "  File \"/Users/adrianatrejo-sheu/opt/anaconda3/lib/python3.8/site-packages/IPython/core/interactiveshell.py\", line 3165, in run_cell_async\n",
+      "    has_raised = await self.run_ast_nodes(code_ast.body, cell_name,\n",
+      "  File \"/Users/adrianatrejo-sheu/opt/anaconda3/lib/python3.8/site-packages/IPython/core/interactiveshell.py\", line 3376, in run_ast_nodes\n",
+      "    self.showtraceback()\n",
+      "  File \"/Users/adrianatrejo-sheu/opt/anaconda3/lib/python3.8/site-packages/IPython/core/interactiveshell.py\", line 2063, in showtraceback\n",
+      "    stb = self.InteractiveTB.structured_traceback(etype,\n",
+      "  File \"/Users/adrianatrejo-sheu/opt/anaconda3/lib/python3.8/site-packages/IPython/core/ultratb.py\", line 1367, in structured_traceback\n",
+      "    return FormattedTB.structured_traceback(\n",
+      "  File \"/Users/adrianatrejo-sheu/opt/anaconda3/lib/python3.8/site-packages/IPython/core/ultratb.py\", line 1267, in structured_traceback\n",
+      "    return VerboseTB.structured_traceback(\n",
+      "  File \"/Users/adrianatrejo-sheu/opt/anaconda3/lib/python3.8/site-packages/IPython/core/ultratb.py\", line 1142, in structured_traceback\n",
+      "    formatted_exceptions += self.format_exception_as_a_whole(etype, evalue, etb, lines_of_context,\n",
+      "  File \"/Users/adrianatrejo-sheu/opt/anaconda3/lib/python3.8/site-packages/IPython/core/ultratb.py\", line 1082, in format_exception_as_a_whole\n",
+      "    last_unique, recursion_repeat = find_recursion(orig_etype, evalue, records)\n",
+      "  File \"/Users/adrianatrejo-sheu/opt/anaconda3/lib/python3.8/site-packages/IPython/core/ultratb.py\", line 382, in find_recursion\n",
+      "    return len(records), 0\n",
+      "TypeError: object of type 'NoneType' has no len()\n",
+      "\n",
+      "During handling of the above exception, another exception occurred:\n",
+      "\n",
+      "Traceback (most recent call last):\n",
+      "  File \"/Users/adrianatrejo-sheu/opt/anaconda3/lib/python3.8/site-packages/IPython/core/interactiveshell.py\", line 2061, in showtraceback\n",
+      "    stb = value._render_traceback_()\n",
+      "AttributeError: 'TypeError' object has no attribute '_render_traceback_'\n",
+      "\n",
+      "During handling of the above exception, another exception occurred:\n",
+      "\n",
+      "Traceback (most recent call last):\n",
+      "  File \"/Users/adrianatrejo-sheu/opt/anaconda3/lib/python3.8/site-packages/IPython/core/ultratb.py\", line 1101, in get_records\n",
+      "    return _fixed_getinnerframes(etb, number_of_lines_of_context, tb_offset)\n",
+      "  File \"/Users/adrianatrejo-sheu/opt/anaconda3/lib/python3.8/site-packages/IPython/core/ultratb.py\", line 248, in wrapped\n",
+      "    return f(*args, **kwargs)\n",
+      "  File \"/Users/adrianatrejo-sheu/opt/anaconda3/lib/python3.8/site-packages/IPython/core/ultratb.py\", line 281, in _fixed_getinnerframes\n",
+      "    records = fix_frame_records_filenames(inspect.getinnerframes(etb, context))\n",
+      "  File \"/Users/adrianatrejo-sheu/opt/anaconda3/lib/python3.8/inspect.py\", line 1515, in getinnerframes\n",
+      "    frameinfo = (tb.tb_frame,) + getframeinfo(tb, context)\n",
+      "  File \"/Users/adrianatrejo-sheu/opt/anaconda3/lib/python3.8/inspect.py\", line 1473, in getframeinfo\n",
+      "    filename = getsourcefile(frame) or getfile(frame)\n",
+      "  File \"/Users/adrianatrejo-sheu/opt/anaconda3/lib/python3.8/inspect.py\", line 708, in getsourcefile\n",
+      "    if getattr(getmodule(object, filename), '__loader__', None) is not None:\n",
+      "  File \"/Users/adrianatrejo-sheu/opt/anaconda3/lib/python3.8/inspect.py\", line 737, in getmodule\n",
+      "    file = getabsfile(object, _filename)\n",
+      "  File \"/Users/adrianatrejo-sheu/opt/anaconda3/lib/python3.8/inspect.py\", line 721, in getabsfile\n",
+      "    return os.path.normcase(os.path.abspath(_filename))\n",
+      "  File \"/Users/adrianatrejo-sheu/opt/anaconda3/lib/python3.8/posixpath.py\", line 379, in abspath\n",
+      "    cwd = os.getcwd()\n",
+      "PermissionError: [Errno 1] Operation not permitted\n"
+     ]
+    }
+   ],
    "source": [
-    "x = dual(3)"
+    "x = Dual(3)"
    ]
   },
   {
@@ -154,7 +380,7 @@
    ],
    "source": [
     "# Single dimension input case, x=1\n",
-    "x = dual(1)\n",
+    "x = Dual(1)\n",
     "f = sin(x) + x + x**2\n",
     "print(f.val, f.der)"
    ]
@@ -175,8 +401,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "x = dual(1)\n",
-    "y = dual(2)\n",
+    "x = Dual(1)\n",
+    "y = Dual(2)\n",
     "f = sin(x*y) + x**y -2*x\n",
     "print(f.val, f.der)"
    ]
@@ -197,8 +423,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "x = dual(1,2)\n",
-    "y = dual(2,3)\n",
+    "x = Dual(1,2)\n",
+    "y = Dual(2,3)\n",
     "f = sin(x*y) + x**y -2*x\n",
     "print(f.val, f.der)"
    ]
