Last update how we run tests

--- a/docs/milestone2.ipynb
+++ b/docs/milestone2.ipynb
@@ -30,7 +30,7 @@
    "source": [
     "## Introduction\n",
     "​\tDifferentiation is a giant part of mathematics, engineering, and computer science. It is important to have a systematic way to solve complex differentiation problems through the use of software instead of doing it by hand, which our Automatic Differentiation package works to accomplish. Automatic Differentiation (AD) is a series of computational techniques to evaluate the derivatives of functions that are specified for computers. AD can be completed either using the fast-forward method, which we will be implementing, or the reverse method. The overall goal of AD is to numerically differentiate a function through the use of point values and formulas, in order to get a numerical value that does not have any approximation error. The fast forward method divides a complex function into a series of elementary derivatives that eventually build up to the final function.\n",
-    "​\tOur library will provide clients the ability to run fast-forward Automatic differentiation as well as another expansion. This package contains all the necessary dependencies that a client will need as well as any documentation to help correctly utilize the program. It also contains mathematical background information in case any clients are not familiar with calculations that are used in AD. This package will be available through PyPI and can be easily downloaded through the website pypi.org"
+    "​\tOur library will provide clients the ability to run fast-forward Automatic differentiation as well as another expansion. This package contains all the necessary dependencies that a client will need as well as any documentation to help correctly utilize the program. It also contains mathematical background information in case any clients are not familiar with calculations that are used in AD. This package will be available through PyPI and can be easily downloaded through the website pypi.org. It is currently not up on PyPI but can be downloaded from the github and that is walked through in a later section."
    ]
   },
   {
@@ -238,8 +238,8 @@
    "source": [
     "## Software Organization\n",
     "\n",
-    "​\tThe overall structure will have multiple levels that all read from a main program that performs the AD process. There will be separate pathways that will solve different mathematical derivatives (i.e. separating derivatives of exponentials and trigonometric ones). We will include multiple packages that are loaded into the program that the client will have access to when downloading our library. The two main modules that we will have is a Dual class and our fast forward auto differentiation. The Dual class will be used to represent complex numbers that can be entered into our auto differentiation function. The auto differentiation function implements a forward mode auto differentiation by taking advantage of the chain rule.Our program will be tested live using both TravisCI and CodeCov, and those tests can be seen on the software’s GitHub. The software can also be downloaded from PyPi.org. We do not plan to use a framework to package our program. \n",
-    "Here is what the structure of our program will look like:\n"
+    "​\tThe overall structure will have multiple levels that all read from a main program that performs the AD process. There will be separate pathways that will solve different mathematical derivatives (i.e. separating derivatives of exponentials and trigonometric ones). We will include multiple packages that are loaded into the program that the client will have access to when downloading our library. The two main modules that we will have is a Dual class and our fast forward auto differentiation. The Dual class will be used to represent complex numbers that can be entered into our auto differentiation function. The auto differentiation function implements a forward mode auto differentiation by taking advantage of the chain rule. To test our program, you can run the test_suite.sh file that uses pytest and pytest-cov to run the tests and provide coverage of them. To run the test_suite file you can simply\n",
+    "do: `bash test_suite.sh` or `./test_suite.sh`. We do not plan to use a framework to package our program. Here is what the structure of our program will look like:\n"
    ]
   },
   {
@@ -251,14 +251,15 @@
     "|--main \n",
     "    |-- requirements.txt \n",
     "    |-- README.md \n",
-    "\t|-- .travis.yml\n",
-    "\t|-- codecov.yml \n",
+    "\t|-- .gitignore\n",
+    "\t|-- .coverage   \n",
     "\t|-- docs \n",
     "\t\t|-- milestone1.md \n",
     "\t\t|-- milestone2.ipynb \n",
     "\t\t|-- milestone2_progress.md \n",
     "\t|-- License \n",
-    "\t|-- tests\n",
+    "    |-- test_suite.sh\n",
+    "\t|-- tests.py\n",
     "\t|-- src \n",
     "\t\t|-- AD_Dual \n",
     "\t\t|-- AD_extension \n",
@@ -330,14 +331,6 @@
     "   \n",
     "   To implement the Reverse Mode, we plan to create a computational graph that will store all the derivative values associated with each node from the Forward pass. The stored values can then be used when we are backpropgating in the Reverse pass to calculate the gradient. This will require a complement independent class structure that clients will need to import. The Reverse Method will work with all the same elementary functions covered in the Forward Pass and should have similar workflows in implementation."
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "442c72bb-4f99-49d1-85c8-0d5a295de16d",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
