--- a/docs/milestone2.ipynb
+++ b/docs/milestone2.ipynb
@@ -106,8 +106,8 @@
    "outputs": [],
    "source": [
     "import sys\n",
-    "sys.path.append('../src')\n",
-    "from Forward import *\n",
+    "sys.path.append('../src/cs107_creativename')\n",
+    "from Forward import *cler\n",
     "from Functions import *"
    ]
   },
@@ -352,7 +352,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -366,7 +366,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
