Changes to allow for installing dependencies in packaging

--- a/docs/Documentation.ipynb
+++ b/docs/Documentation.ipynb
@@ -105,10 +105,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import sys\n",
-    "sys.path.append('../src')\n",
-    "from Forward import *\n",
-    "from Functions import *"
+    "from cs107_creativename.Forward import *\n",
+    "from cs107_creativename.Functions import *"
    ]
   },
   {
