--- a/docs/Documentation.ipynb
+++ b/docs/Documentation.ipynb
@@ -75,11 +75,12 @@
     "Steps to download: \n",
     "You want to download the code from our repo to your local computer. \n",
     "\n",
-    "`git clone https://github.com/cs107-creativename/cs107-FinalProject.git` \n",
+    "`git clone https://github.com/cs107-creativename/cs107-FinalProject.git`\n",
+    "While in the folder to download everything locally. \\\n",
+    "`pip install .`\n",
     "\n",
-    "`cd cs107-FinalProject` \n",
-    "\n",
-    "`pip install - r requirements.txt` "
+    "The other way to install is to download our package from TestPyPI. \n",
+    "`pip install -i https://test.pypi.org/simple/ cs107-creativename`"
    ]
   },
   {
@@ -95,12 +96,25 @@
    "id": "dcc35e41-84b6-41fc-82a1-659e3084b036",
    "metadata": {},
    "source": [
-    "#### Importing the Functions"
+    "#### Importing the Functions\n",
+    "**Note** You must import Functions in order to have any trig or additional functions be used. This can also be taken care of if you run the code: \\\n",
+    "`from cs107_creativename import *`\n",
+    "**Note** In order to have this Juptyer notebook work you must have our package downloaded which can be done be either uncommenting the next cell to have it imported locally or using the pip install method with TestPyPI. By installing locally, you are able to run tests."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
+   "id": "4f36d050-94f9-4d2e-81a8-299078059fd1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#pip install ../."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "id": "b3959111-e003-4b32-925d-e2ae46c8e944",
    "metadata": {},
    "outputs": [],
@@ -115,17 +129,26 @@
    "metadata": {},
    "source": [
     "#### Instantiate an object\n",
-    "This will make the x variable a dual_temp class variable."
+    "This will make the x variable a Forward.Dual class variable."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 10,
    "id": "8887c5f9-7a0e-420e-b313-c5f38a40fc43",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'cs107_creativename.Forward.Dual'>\n"
+     ]
+    }
+   ],
    "source": [
-    "x = Dual(3)"
+    "x = Dual(3)\n",
+    "print(type(x))"
    ]
   },
   {
@@ -133,13 +156,13 @@
    "id": "20385f03-9eae-46ea-bfda-ea4cce4b04df",
    "metadata": {},
    "source": [
-    "#### Using the Autodiff class with one dimension (i.e. having one variable x)\n",
+    "#### Using the Forward class with one dimension (i.e. having one variable x)\n",
     "Once we instantiate x, we can use it in function that we can then store the value of the function and the derivative."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "id": "99c7368b-20e8-4bf9-98bf-f6605ac67895",
    "metadata": {},
    "outputs": [
@@ -163,7 +186,7 @@
    "id": "8ba06e49-7e3d-4593-bfd9-37dd6648131c",
    "metadata": {},
    "source": [
-    "#### Using the Autodiff class with Two dimensions (i.e having two variables x and y)\n",
+    "#### Using the Forward class with Two dimensions (i.e having two variables x and y)\n",
     "The previous example can be expanded to instantiate multiple variables."
    ]
   },
@@ -224,12 +247,13 @@
    "metadata": {},
    "source": [
     "#### Calculating gradient, note that the sin function is the ones we define\n",
-    "How to fill out the get_gradient function: get_gradient(**function, amount of variables, values for variables in list format**)"
+    "How to fill out the AutoDiffF function: AutoDiffR(**function, values for variables in list format**).\n",
+    "It returns the gradient, which includes the partial for each variable at the specified value."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 16,
    "id": "4d48f1f1-456d-4f23-8cff-6d726c0818fe",
    "metadata": {},
    "outputs": [
@@ -244,7 +268,34 @@
    "source": [
     "def f(x, y, z):\n",
     "    return sin(x) + y**3 + x*z\n",
-    "print(get_gradient(f, 3, [1,3,2]))"
+    "print(AutoDiffF(f,[1,3,2]))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "554ef3ee-b76c-4f90-8b6f-4d64304dd322",
+   "metadata": {},
+   "source": [
+    "#### You can also use Lambda functions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "28fc4012-07e1-4913-953d-563f68defb46",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[2.5403023058681398, 27.0, 1.0]\n"
+     ]
+    }
+   ],
+   "source": [
+    "func = lambda x,y,z: sin(x) + y**3 + x*z\n",
+    "print(AutoDiffF(func,[1,3,2]))"
    ]
   },
   {
@@ -270,7 +321,8 @@
    "source": [
     "```\n",
     "|--main \n",
-    "    |-- requirements.txt \n",
+    "    |-- pyproject.toml\n",
+    "    |--setup.cfg\n",
     "    |-- README.md \n",
     "\t|-- .gitignore\n",
     "\t|-- .coverage   \n",
@@ -279,12 +331,15 @@
     "\t\t|-- milestone1.md \n",
     "\t\t|-- milestone2.ipynb \n",
     "\t\t|-- milestone2_progress.md \n",
-    "\t|-- License \n",
-    "    |-- test_suite.sh\n",
-    "\t|-- tests.py\n",
+    "\t|-- License.md \n",
+    "    |-- tests\n",
+    "        |-- test_suite.sh\n",
+    "        |-- cs107_creativename_tests\n",
+    "            |-- tests.py\n",
     "\t|-- src \n",
-    "\t\t|-- AD_Dual \n",
-    "\t\t|-- AD_extension \n",
+    "\t\t|-- Functions.py\n",
+    "\t\t|-- Reverse.py\n",
+    "        |-- Forward.py\n",
     "```\n"
    ]
   },
@@ -351,8 +406,171 @@
    "source": [
     "  We plan to implement the Reverse Mode of Auto differentiation. It accomplishes the same tasks as the Forward mode that we have already implemented but has different methods to accomplish this. The Reverse Mode has two passes, Forward and Reverse, and does not use the chain rule. Reverse Mode use the sensitivity of the function with respect to the independent variable and all intermediate variables in order to recover the gradient that was not calculated in each step because we did not use the chain rule. The Forward pass of Reverse Mode works to get the value of the function for that independent variable as well as the derivative with respect __ONLY__ that independent variable (no chain rule). The Reverse Pass then creates the chain rule that was not done in the Forward pass by traversing the path that was created in the Forward pass backwards. This traversal will work to store the sensitivity or the chain rule in each step. This back propagation works only with values and does not require us to evaluate the function further.\n",
     "   \n",
-    "   To implement the Reverse Mode, we plan to create a computational graph that will store all the derivative values associated with each node from the Forward pass. The stored values can then be used when we are backpropgating in the Reverse pass to calculate the gradient. This will require a complement independent class structure that clients will need to import. The Reverse Method will work with all the same elementary functions covered in the Forward Pass and should have similar workflows in implementation."
+    "   To implement the Reverse Mode, we created a computational graph that stores all the values of the function based off of each node in the graph. It will calculate the gradient at the end when the AutoDiffR function is called. The Reverse mode will give the same responses as the Forward mode but it was just created differently under the hood. The following cells will show you how to use this portion of the package, and it will be quite similar to how the Forward Mode was used."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "3dc159e4-668b-45ee-9b68-afbd61ef27a7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from cs107_creativename.Reverse import *\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b896595a-57e8-468b-9e66-b1483bb7693a",
+   "metadata": {},
+   "source": [
+    "#### Instantiate an object\n",
+    "This will make the x variable a Reverse.Node class variable."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "2c35fb64-1428-416c-bdae-696ef9cbdc13",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'cs107_creativename.Reverse.Node'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = Node(3)\n",
+    "print(type(x))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "08f64f3d-18a4-4374-9d43-fbea7d971fbf",
+   "metadata": {},
+   "source": [
+    "#### Using the Reverse class with one dimension (i.e. having one variable x)\n",
+    "Once we instantiate x, we can use it in function that we can then store the value of the function. \\\n",
+    "**Note** we are not storing the value of the derivative here as we do in the Forward Mode. This is because of how we accomplish the Reverse Mode. You will be able to get the final gradient at the end."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "20d1f03a-7d97-44bd-b189-af339217e400",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2.8414709848078967\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = Node(1)\n",
+    "f = sin(x)+x +x**2\n",
+    "print(f.val)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cab10da8-e3a4-4cd9-ba2a-3fd165670506",
+   "metadata": {},
+   "source": [
+    "#### Using the Reverse class with Two dimensions (i.e having two variables x and y)\n",
+    "The previous example can be expanded to instantiate multiple variables."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "53795ad8-6b99-46ee-af74-7435ed419db7",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-0.09070257317431829\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = Node(1)\n",
+    "y = Node(2)\n",
+    "f = sin(x*y) + x**y - 2*x\n",
+    "print(f.val)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b6e9c65e-1777-4d69-91c8-1d96320b5173",
+   "metadata": {},
+   "source": [
+    "#### Calculating gradient, note that the sin function is the ones we define\n",
+    "How to fill out the AutoDiffR function: AutoDiffR(**function, values for variables in list format**).\n",
+    "It returns the gradient, which includes the partial for each variable at the specified value."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "7c19453a-6a3d-4bc7-b08b-7d2b1702c765",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[2.5403023058681398, 27, 1]\n"
+     ]
+    }
+   ],
+   "source": [
+    "def f(x, y, z):\n",
+    "    return sin(x) + y**3 + x*z\n",
+    "print(AutoDiffR(f,[1,3,2]))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5e541f0d-2f0f-4f70-bc23-3b0959a607d0",
+   "metadata": {},
+   "source": [
+    "#### Can also use lambda functions \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "ed5655a0-2ce9-4f52-8ce5-6e7ff8bf1617",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[2.5403023058681398, 27, 1]\n"
+     ]
+    }
+   ],
+   "source": [
+    "func = lambda x,y,z: sin(x) + y**3 + x*z\n",
+    "print(AutoDiffR(func,[1,3,2]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6c29a17a-a852-4b97-a539-7a5f44c0091a",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
