Updates to setup config and Documentation to represent current package

--- a/docs/Documentation.ipynb
+++ b/docs/Documentation.ipynb
@@ -76,10 +76,11 @@
     "You want to download the code from our repo to your local computer. \n",
     "\n",
     "`git clone https://github.com/cs107-creativename/cs107-FinalProject.git`\n",
+    "\n",
     "While in the folder to download everything locally. \\\n",
     "`pip install .`\n",
     "\n",
-    "The other way to install is to download our package from TestPyPI. \n",
+    "The other way to install is to download our package from TestPyPI.  \\\n",
     "`pip install -i https://test.pypi.org/simple/ cs107-creativename`"
    ]
   },
@@ -99,6 +100,7 @@
     "#### Importing the Functions\n",
     "**Note** You must import Functions in order to have any trig or additional functions be used. This can also be taken care of if you run the code: \\\n",
     "`from cs107_creativename import *`\n",
+    "\n",
     "**Note** In order to have this Juptyer notebook work you must have our package downloaded which can be done be either uncommenting the next cell to have it imported locally or using the pip install method with TestPyPI. By installing locally, you are able to run tests."
    ]
   },
