Update to documentation to add a note for running the tests

--- a/docs/Documentation.ipynb
+++ b/docs/Documentation.ipynb
@@ -313,6 +313,8 @@
     "To run the test_suite file you can simply\n",
     "do: `bash test_suite.sh` or `./test_suite.sh`. \n",
     "\n",
+    "**Note** You must have the package downloaded in order to run the tests. Please refer to the instructions in How to use cs107_creativename to download it.\n",
+    "\n",
     "We do not plan to use a framework to package our program. Here is what the structure of our program will look like:\n"
    ]
   },
