Including Broader Impact and Inclusivity statements

--- a/docs/Documentation.ipynb
+++ b/docs/Documentation.ipynb
@@ -15,10 +15,10 @@
    "source": [
     "## Group Number: 17 \n",
     "### Group Members:\n",
-    "- Diana Feng\n",
-    "- Varshini Subhash\n",
-    "- Xiaobo Luo\n",
-    "- Adriana Trejo-Sheu\n",
+    "- Diana Feng, **email**: dianafeng@g.harvard.edu\n",
+    "- Varshini Subhash, **email**: varshinisubhash@g.harvard.edu\n",
+    "- Xiaobo Luo, **email**: xluo@g.harvard.edu\n",
+    "- Adriana Trejo-Sheu, **email**: atrejosheu@g.harvard.edu\n",
     "\n",
     "Description: This is the final project repo for Group 14"
    ]
@@ -73,14 +73,15 @@
    "metadata": {},
    "source": [
     "Steps to download: \n",
-    "You want to download the code from our repo to your local computer. \n",
+    "You want to download the code from our repo to your local computer. We recommend if you are a Developer to use this method so that you are able to run the tests folder.\n",
     "\n",
     "`git clone https://github.com/cs107-creativename/cs107-FinalProject.git`\n",
     "\n",
     "While in the folder to download everything locally. \\\n",
     "`pip install .`\n",
     "\n",
-    "The other way to install is to download our package from TestPyPI.  \\\n",
+    "The other way to install is to download our package from TestPyPI. If you are not a Developer and just plan to use this package for calculating derivatives, we recommend install our package through the command below:\n",
+    "\n",
     "`pip install -i https://test.pypi.org/simple/ cs107-creativename`"
    ]
   },
@@ -101,12 +102,15 @@
     "**Note** You must import Functions in order to have any trig or additional functions be used. This can also be taken care of if you run the code: \\\n",
     "`from cs107_creativename import *`\n",
     "\n",
+    "**Note** We recommend instead of using the above methods to import the different portions of our package using this method:\n",
+    "`import cs107_creativename.MODULE as module_name`. This is a more pythonic way to import package and it helps be clear what you are using. This is how we have written this notebook.\n",
+    "\n",
     "**Note** In order to have this Juptyer notebook work you must have our package downloaded which can be done be either uncommenting the next cell to have it imported locally or using the pip install method with TestPyPI. By installing locally, you are able to run tests."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "4f36d050-94f9-4d2e-81a8-299078059fd1",
    "metadata": {},
    "outputs": [],
@@ -116,13 +120,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "b3959111-e003-4b32-925d-e2ae46c8e944",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from cs107_creativename.Forward import *\n",
-    "from cs107_creativename.Functions import *"
+    "import cs107_creativename.Forward as Forward\n",
+    "import cs107_creativename.Functions as Func"
    ]
   },
   {
@@ -136,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "id": "8887c5f9-7a0e-420e-b313-c5f38a40fc43",
    "metadata": {},
    "outputs": [
@@ -149,7 +153,7 @@
     }
    ],
    "source": [
-    "x = Dual(3)\n",
+    "x = Forward.Dual(3)\n",
     "print(type(x))"
    ]
   },
@@ -164,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "99c7368b-20e8-4bf9-98bf-f6605ac67895",
    "metadata": {},
    "outputs": [
@@ -178,8 +182,8 @@
    ],
    "source": [
     "# Single dimension input case, x=1\n",
-    "x = Dual(1)\n",
-    "f = sin(x) + x + x**2\n",
+    "x = Forward.Dual(1)\n",
+    "f = Func.sin(x) + x + x**2\n",
     "print(f.val, f.der)"
    ]
   },
@@ -194,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "id": "2701162e-e01a-4f34-951b-3a0fe022b0f8",
    "metadata": {},
    "outputs": [
@@ -207,9 +211,9 @@
     }
    ],
    "source": [
-    "x = Dual(1)\n",
-    "y = Dual(2)\n",
-    "f = sin(x*y) + x**y -2*x\n",
+    "x = Forward.Dual(1)\n",
+    "y = Forward.Dual(2)\n",
+    "f = Func.sin(x*y) + x**y -2*x\n",
     "print(f.val, f.der)"
    ]
   },
@@ -224,7 +228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "id": "400bae47-d129-44a1-8fa7-578d7fca14fb",
    "metadata": {},
    "outputs": [
@@ -237,9 +241,9 @@
     }
    ],
    "source": [
-    "x = Dual(1,2)\n",
-    "y = Dual(2,3)\n",
-    "f = sin(x*y) + x**y -2*x\n",
+    "x = Forward.Dual(1,2)\n",
+    "y = Forward.Dual(2,3)\n",
+    "f = Func.sin(x*y) + x**y -2*x\n",
     "print(f.val, f.der)"
    ]
   },
@@ -255,7 +259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 9,
    "id": "4d48f1f1-456d-4f23-8cff-6d726c0818fe",
    "metadata": {},
    "outputs": [
@@ -269,8 +273,8 @@
    ],
    "source": [
     "def f(x, y, z):\n",
-    "    return sin(x) + y**3 + x*z\n",
-    "print(AutoDiffF(f,[1,3,2]))"
+    "    return Func.sin(x) + y**3 + x*z\n",
+    "print(Forward.AutoDiffF(f,[1,3,2]))"
    ]
   },
   {
@@ -283,7 +287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 11,
    "id": "28fc4012-07e1-4913-953d-563f68defb46",
    "metadata": {},
    "outputs": [
@@ -296,8 +300,8 @@
     }
    ],
    "source": [
-    "func = lambda x,y,z: sin(x) + y**3 + x*z\n",
-    "print(AutoDiffF(func,[1,3,2]))"
+    "func = lambda x,y,z: Func.sin(x) + y**3 + x*z\n",
+    "print(Forward.AutoDiffF(func,[1,3,2]))"
    ]
   },
   {
@@ -415,12 +419,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 12,
    "id": "3dc159e4-668b-45ee-9b68-afbd61ef27a7",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from cs107_creativename.Reverse import *\n"
+    "import cs107_creativename.Reverse as Reverse\n"
    ]
   },
   {
@@ -434,7 +438,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 13,
    "id": "2c35fb64-1428-416c-bdae-696ef9cbdc13",
    "metadata": {},
    "outputs": [
@@ -447,7 +451,7 @@
     }
    ],
    "source": [
-    "x = Node(3)\n",
+    "x = Reverse.Node(3)\n",
     "print(type(x))"
    ]
   },
@@ -463,7 +467,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 14,
    "id": "20d1f03a-7d97-44bd-b189-af339217e400",
    "metadata": {},
    "outputs": [
@@ -476,8 +480,8 @@
     }
    ],
    "source": [
-    "x = Node(1)\n",
-    "f = sin(x)+x +x**2\n",
+    "x = Reverse.Node(1)\n",
+    "f = Func.sin(x)+x +x**2\n",
     "print(f.val)"
    ]
   },
@@ -492,7 +496,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 15,
    "id": "53795ad8-6b99-46ee-af74-7435ed419db7",
    "metadata": {},
    "outputs": [
@@ -505,9 +509,9 @@
     }
    ],
    "source": [
-    "x = Node(1)\n",
-    "y = Node(2)\n",
-    "f = sin(x*y) + x**y - 2*x\n",
+    "x = Reverse.Node(1)\n",
+    "y = Reverse.Node(2)\n",
+    "f = Func.sin(x*y) + x**y - 2*x\n",
     "print(f.val)"
    ]
   },
@@ -523,7 +527,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 16,
    "id": "7c19453a-6a3d-4bc7-b08b-7d2b1702c765",
    "metadata": {},
    "outputs": [
@@ -537,8 +541,8 @@
    ],
    "source": [
     "def f(x, y, z):\n",
-    "    return sin(x) + y**3 + x*z\n",
-    "print(AutoDiffR(f,[1,3,2]))"
+    "    return Func.sin(x) + y**3 + x*z\n",
+    "print(Reverse.AutoDiffR(f,[1,3,2]))"
    ]
   },
   {
@@ -551,7 +555,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 17,
    "id": "ed5655a0-2ce9-4f52-8ce5-6e7ff8bf1617",
    "metadata": {},
    "outputs": [
@@ -564,14 +568,39 @@
     }
    ],
    "source": [
-    "func = lambda x,y,z: sin(x) + y**3 + x*z\n",
-    "print(AutoDiffR(func,[1,3,2]))"
+    "func = lambda x,y,z: Func.sin(x) + y**3 + x*z\n",
+    "print(Reverse.AutoDiffR(func,[1,3,2]))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "17db46ad-14ae-4ff1-b5bb-0e3d0bcf6aec",
+   "metadata": {},
+   "source": [
+    "# Feature Work \n",
+    "What else do you want to add? What is missing? Don't just think about mathematical things here. Try to think about applications that you'd like to have use your code. Just about every area of science can use automatic differentiation (physics, biology, genetics, applied mathematics, optimization, statistics / machine learning, health science, etc)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "674863c5-bd85-43bf-899c-048a11f1f2da",
+   "metadata": {},
+   "source": [
+    "# Broader Impact and Inclusivity Statement\n",
+    "\n",
+    "Our software works to use Auto-Differentiation to return the value, derivative and gradients of a function. This package is expected to be used for Engineering and math topics, and we hope it can help simplify any steps needed to solve for the aforementioned data. This software’s target audience are students who may need derivative or gradient values in solving mathematical problems.  This software is not meant to replace a user’s understanding of these mathematical concepts, and we hope that the users understand what the process is accomplishing and how it does these steps. We hope through our documentation that we have given enough background information to support any user and guide them in the correct ways that we have hoped our package would be utilized. We do not see any ethical implications within our work considering our data used should not be impacted by bias but come from accepted mathematical theorems.\n",
+    "\n",
+    "Inclusivity was an important consideration in the development and use of our package. With the ability to download our package through various means and thorough documentation, we hope that our package is simple to use. Despite writing our documentation in English, we wrote in simple, straightforward language that easily allows for accurate translations, using Google translate or other means, to read and interpret our documentation. As long as an individual has access to a computer and wifi, they are able to download our package using a simple `pip install` method or through cloning our directory. Despite having these options, we still acknowledge that we are not fully inclusive with our package. \n",
+    "\t\n",
+    "   We do have certain expectations of who the user will be and that did impact our methods of implementation. We expect users to have a certain level and understanding of mathematics as well as should be comfortable with using python as a language. While our documentation works to give people a base background in Auto Differentiation and the chain rule, it may not be enough or too generalized for individuals to fully understand the implications of the software. To combat these shortcomings, we have included our emails in the README.md section to accept feedback from users and to make changes as we see fit to improve the inclusivity of our package. \n",
+    "\t\n",
+    "   We feel that Python’s Diversity statement matches what we believe and would require in being an exclusive platform for people of any age, sexual orientation, gender identity, religious affliation, and ethnic/racial background. While our group comprises women of color and people of color, we are not versed in all needs of minority groups and hope that with using Python’s reach and resources we can provide a more inclusive, respectful software and interaction with our package. \n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6c29a17a-a852-4b97-a539-7a5f44c0091a",
+   "id": "b9ee2c7b-85f0-4462-8eef-8b3f57e0a214",
    "metadata": {},
    "outputs": [],
    "source": []
