Updating to add vector input demos

--- a/docs/Documentation.ipynb
+++ b/docs/Documentation.ipynb
@@ -306,6 +306,49 @@
   },
   {
    "cell_type": "markdown",
+   "id": "2d775a2b-2d6e-48a6-95f6-6dca6d722413",
+   "metadata": {},
+   "source": [
+    "### We can also calculate the gradient of a vector input\n",
+    "This will work similar to how the AutoDiffF is used above but we pass a list of function and values. It will also return the gradients respective to how you inputted the function vector and the values."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "99ee1a6b-323a-41e1-9a44-6ba482c2681f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[2.5403023058681398, 27.0, 1.0], [2.191687919932309, -0.9589242746631385, 28.871996020209586]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "def f(x, y, z):\n",
+    "    return Func.sin(x) + y**3 + x*z\n",
+    "\n",
+    "\n",
+    "def g(x, y, z):\n",
+    "    return Func.logistic(x) + Func.arctan(y*Func.sin(x)) + x*Func.tan(z)\n",
+    "\n",
+    "\n",
+    "print(Forward.AutoDiffF([f,g], [[1,3,2],[5,0,-2]]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0b6665e3-d540-4720-bed9-853f172a637f",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
    "id": "5f300a20-bad0-43c5-abc1-38b6f5233117",
    "metadata": {},
    "source": [
@@ -371,6 +414,15 @@
     "- \\_\\_rmul__\n",
     "- \\_\\_sub__\n",
     "- \\_\\_rsub__\n",
+    "- \\_\\_neg__\n",
+    "\n",
+    "Dual class comparision operators covered:\n",
+    "- \\_\\_lt__ (less than)\n",
+    "- \\_\\_gt__ (greater than)\n",
+    "- \\_\\_le__ (less than or equal to)\n",
+    "- \\_\\_ge__ (greater than or equal to)\n",
+    "- \\_\\_eq__ (equal to)\n",
+    "- \\_\\_ne__ (not equal to)\n",
     "\n",
     "\n",
     "List of elementary functions covered: \n",
@@ -386,7 +438,10 @@
     "- arcsinh()\n",
     "- arccosh()\n",
     "- arctan(h)\n",
-    "- exp()"
+    "- exp()\n",
+    "- sqrt()\n",
+    "- log()\n",
+    "- logistic()"
    ]
   },
   {
@@ -404,7 +459,7 @@
    "id": "dfc2b4e6-98fa-4bc5-8ccc-c75ac3682463",
    "metadata": {},
    "source": [
-    "## Future Features"
+    "## Extension: Reverse Mode"
    ]
   },
   {
@@ -414,12 +469,14 @@
    "source": [
     "  We plan to implement the Reverse Mode of Auto differentiation. It accomplishes the same tasks as the Forward mode that we have already implemented but has different methods to accomplish this. The Reverse Mode has two passes, Forward and Reverse, and does not use the chain rule. Reverse Mode use the sensitivity of the function with respect to the independent variable and all intermediate variables in order to recover the gradient that was not calculated in each step because we did not use the chain rule. The Forward pass of Reverse Mode works to get the value of the function for that independent variable as well as the derivative with respect __ONLY__ that independent variable (no chain rule). The Reverse Pass then creates the chain rule that was not done in the Forward pass by traversing the path that was created in the Forward pass backwards. This traversal will work to store the sensitivity or the chain rule in each step. This back propagation works only with values and does not require us to evaluate the function further.\n",
     "   \n",
-    "   To implement the Reverse Mode, we created a computational graph that stores all the values of the function based off of each node in the graph. It will calculate the gradient at the end when the AutoDiffR function is called. The Reverse mode will give the same responses as the Forward mode but it was just created differently under the hood. The following cells will show you how to use this portion of the package, and it will be quite similar to how the Forward Mode was used."
+    "   To implement the Reverse Mode, we created a computational graph that stores all the values of the function based off of each node in the graph. It will calculate the gradient at the end when the AutoDiffR function is called. The Reverse mode will give the same responses as the Forward mode but it was just created differently under the hood. The following cells will show you how to use this portion of the package, and it will be quite similar to how the Forward Mode was used.\n",
+    "   \n",
+    "**Note** The Reverse mode class has covered all the same class functions, comparision operators, and elementary functions as the Forward mode. "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 7,
    "id": "3dc159e4-668b-45ee-9b68-afbd61ef27a7",
    "metadata": {},
    "outputs": [],
@@ -574,11 +631,48 @@
   },
   {
    "cell_type": "markdown",
+   "id": "591c37aa-141b-48ad-b713-0a2feb1f756a",
+   "metadata": {},
+   "source": [
+    "### Calculating gradient of a vector input\n",
+    "This will work similar to how the AutoDiffR is used above but we pass a list of function and values. It will also return the gradients respective to how you inputted the function vector and the values."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "2101cde3-985f-4d2c-ad67-d95e20b2a987",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[2.5403023058681398, 27, 1], [2.191687919932309, -0.9589242746631385, 28.871996020209586]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "def f(x, y, z):\n",
+    "    return Func.sin(x) + y**3 + x*z\n",
+    "\n",
+    "\n",
+    "def g(x, y, z):\n",
+    "    return Func.logistic(x) + Func.arctan(y*Func.sin(x)) + x*Func.tan(z)\n",
+    "\n",
+    "\n",
+    "print(Reverse.AutoDiffR([f,g], [[1,3,2],[5,0,-2]]))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "17db46ad-14ae-4ff1-b5bb-0e3d0bcf6aec",
    "metadata": {},
    "source": [
-    "# Feature Work \n",
-    "What else do you want to add? What is missing? Don't just think about mathematical things here. Try to think about applications that you'd like to have use your code. Just about every area of science can use automatic differentiation (physics, biology, genetics, applied mathematics, optimization, statistics / machine learning, health science, etc)."
+    "# Future Work \n",
+    "We can implement additional features like computing the Hessian matrix, which consists of the second-order partial derivatives of a function. We can also explore potential root solving methods that use the gradient/derivative calculations, such as Newton's method, Broyden–Fletcher–Goldfarb–Shanno (BFGS), or steepest descent. This could be helpful for a serious of applications because it can be used for optimizing models or predictions by finding global minimums or maxima. \n",
+    "\n",
+    "Presently, the reverse mode uses a recursive call to the parent node at the lowest level (child node) of the computational graph. We intend to perform a rigorous runtime performance evaluation and stress test the implementation by testing nested functions.\n"
    ]
   },
   {
