added in benchmarks and updated documentation to reflect the benchmarks

--- a/docs/Documentation.ipynb
+++ b/docs/Documentation.ipynb
@@ -672,7 +672,8 @@
     "# Future Work \n",
     "We can implement additional features like computing the Hessian matrix, which consists of the second-order partial derivatives of a function. We can also explore potential root solving methods that use the gradient/derivative calculations, such as Newton's method, Broyden–Fletcher–Goldfarb–Shanno (BFGS), or steepest descent. This could be helpful for a serious of applications because it can be used for optimizing models or predictions by finding global minimums or maxima. \n",
     "\n",
-    "Presently, the reverse mode uses a recursive call to the parent node at the lowest level (child node) of the computational graph. We intend to perform a rigorous runtime performance evaluation and stress test the implementation by testing nested functions.\n"
+    "Presently, the reverse mode uses a recursive call to the parent node at the lowest level (child node) of the computational graph. We implemented a limited runtime test for moderately nested functions with short repeat segments up to 160 times. The results indicated that for the most part, the execution time for both the forward mode and reverse mode increases linearly as the number of repeats increased, and that the reverse mode is consistently faster than the forward mode. However, when compared to the functions with distinct variable (i.e. no repeat segments), the performance boost of our implementation of the reverse mode is less pronounced. Thus, for future implementation, it would be necessary to test alternative design of the Node structure to can balance memory usage and running time. It might be appropriate to design a separate implementation specifically for higher-order, highly nested functions with frequent repeats.\n",
+    "\n"
    ]
   },
   {
